--- a/index.html
+++ b/index.html
@@ -77,9 +77,36 @@
 </ul>
 
 <style type="text/css">#id_1576607552543_812.share-buttons {list-style: none; padding: 0;}#id_1576607552543_812.share-buttons li {display: inline;}#id_1576607552543_812.share-buttons .sr-only {position: absolute; clip: rect(1px, 1px, 1px, 1px); padding: 0; border: 0; height: 1px; width: 1px; overflow: hidden;}</style>
-</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576608464269-12 html-element" style=""><div class="silex-element-content">ABG<sup>TM</sup>.</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576601654578-3 html-element" style=""><div class="silex-element-content"><iframe src="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&amp;oFa=0&amp;oC=0&amp;oU=0&amp;oCS=1&amp;oF=0&amp;oAP=0&amp;rmt=4&amp;c=1&amp;o=83&amp;lm=0&amp;th=0&amp;sm=1&amp;sn=1" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen=""></iframe></div></div><div data-silex-type="text-element" class="editable-style silex-id-1576611862490-17 text-element" style=""><div class="silex-element-content normal"><p>ABG is the best news station in Rising Sun (The only news station there). There's will be a cloudy sky.</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576677900532-19 html-element" style=""><div class="silex-element-content"><div class="alert">
+</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576608464269-12 html-element" style=""><div class="silex-element-content">ABG<sup>TM</sup>.</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576601654578-3 html-element" style=""><div class="silex-element-content"><iframe src="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&amp;oFa=0&amp;oC=0&amp;oU=0&amp;oCS=1&amp;oF=0&amp;oAP=0&amp;rmt=4&amp;c=1&amp;o=83&amp;lm=0&amp;th=0&amp;sm=1&amp;sn=1" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen=""></iframe></div></div><div data-silex-type="text-element" class="editable-style silex-id-1576611862490-17 text-element" style=""><div class="silex-element-content normal"><p>ABG is the best news station in Rising Sun (The only news station there). There's will be a cloudy sky.</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576683209451-20 html-element" style=""><div class="silex-element-content">
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>.alert {padding: 20px; background-color: #f44336; color: white;}.closebtn {margin-left: 15px; color: white; font-weight: bold; float: right; font-size: 22px; line-height: 20px; cursor: pointer; transition: 0.3s;}.closebtn:hover {color: black;}</style>
+
+
+
+<h2></h2>
+
+<p></p>
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span> 
+  <strong>WARNING</strong> Sante might die.
+</div>
+
+
+
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>.alert {padding: 20px; background-color: #f44336; color: white;}.closebtn {margin-left: 15px; color: white; font-weight: bold; float: right; font-size: 22px; line-height: 20px; cursor: pointer; transition: 0.3s;}.closebtn:hover {color: black;}</style>
+
+
+
+
+
+</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576677900532-19 html-element" style=""><div class="silex-element-content"><div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
-  DANGER SANTE MIGHT DIE
+  Welcome to ABG
 </div></div></div></div>
     </div>
     <div data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element" style="">
