--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
     
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="website-width" content="1200"><meta name="hostingProvider" content="ghpages"><script src="js/ol.js"></script><meta name="twitter:card" content="summary"><meta name="twitter:title" content="ABG"><meta name="og:title" content="ABG"><meta name="description" content="Rising Sun news channel ABG."><meta name="websiteUrl" content="https://arborlyharbor91.github.io/CoolAid/"><link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="website-width" content="1200"><meta name="hostingProvider" content="ghpages"><script src="js/ol.js"></script><meta name="twitter:title" content="ABG"><meta name="og:title" content="ABG"><meta name="description" content="Rising Sun news channel ABG."><meta name="websiteUrl" content="https://arborlyharbor91.github.io/CoolAid/"><meta name="twitter:card" content="summary"><link href="css/styles.css" rel="stylesheet" type="text/css">
     <style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 <body class="body-initial all-style enable-mobile silex-runtime silex-published" data-silex-type="container-element" style="">
@@ -36,10 +36,13 @@
 
 
     <div data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element website-width"></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element website-width"><div data-silex-type="html-element" class="editable-style silex-id-1576677900532-19 html-element" style=""><div class="silex-element-content"><div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+  Welcome to ABG
+</div></div></div></div>
     </div>
     <div data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element website-width" style=""><div data-silex-type="html-element" class="editable-style silex-id-1576601336669-2 html-element" style=""><div class="silex-element-content"><script type="text/javascript" src="https://darksky.net/widget/graph-bar/38.9512,-84.8572/us12/en.js?width=100%&amp;height=400&amp;title=Full Forecast&amp;textColor=333333&amp;bgColor=FFFFFF&amp;transparency=false&amp;skyColor=undefined&amp;fontFamily=Default&amp;customFont=&amp;units=us&amp;timeColor=333333&amp;tempColor=333333&amp;currentDetailsOption=true"></script></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576607551219-4 html-element silex-component silex-component-share" style=""><div class="silex-element-content">
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element website-width" style=""><div data-silex-type="html-element" class="editable-style silex-id-1576601336669-2 html-element" style=""><div class="silex-element-content"><script type="text/javascript" src="https://darksky.net/widget/graph-bar/38.9512,-84.8572/us12/en.js?width=100%&amp;height=400&amp;title=Full%20Forecast&amp;textColor=333333&amp;bgColor=FFFFFF&amp;transparency=false&amp;skyColor=undefined&amp;fontFamily=Default&amp;customFont=&amp;units=us&amp;timeColor=333333&amp;tempColor=333333&amp;currentDetailsOption=true"></script></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576607551219-4 html-element silex-component silex-component-share" style=""><div class="silex-element-content">
 <ul class="share-buttons" id="id_1576607552543_812">
   
   <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://yoursite.com&amp;t=Your site title" title="Share on Facebook" target="_blank"><img alt="Share on Facebook" src="assets/Facebook.png"></a></li>
@@ -77,7 +80,7 @@
 </ul>
 
 <style type="text/css">#id_1576607552543_812.share-buttons {list-style: none; padding: 0;}#id_1576607552543_812.share-buttons li {display: inline;}#id_1576607552543_812.share-buttons .sr-only {position: absolute; clip: rect(1px, 1px, 1px, 1px); padding: 0; border: 0; height: 1px; width: 1px; overflow: hidden;}</style>
-</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576608464269-12 html-element" style=""><div class="silex-element-content">ABG<sup>TM</sup>.</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576601654578-3 html-element" style=""><div class="silex-element-content"><iframe src="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&amp;oFa=0&amp;oC=0&amp;oU=0&amp;oCS=1&amp;oF=0&amp;oAP=0&amp;rmt=4&amp;c=1&amp;o=83&amp;lm=0&amp;th=0&amp;sm=1&amp;sn=1" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen=""></iframe></div></div><div data-silex-type="text-element" class="editable-style silex-id-1576611862490-17 text-element" style=""><div class="silex-element-content normal"><p>ABG is the best news station in Rising Sun (The only news station there). There's will be a cloudy sky.</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576683209451-20 html-element" style=""><div class="silex-element-content">
+</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576608464269-12 html-element" style=""><div class="silex-element-content">ABG<sup>TM</sup>.</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576601654578-3 html-element" style=""><div class="silex-element-content"><iframe src="https://www.rainviewer.com/map.html?loc=40.7831,-73.9712,6&amp;oFa=0&amp;oC=0&amp;oU=0&amp;oCS=1&amp;oF=0&amp;oAP=0&amp;rmt=4&amp;c=1&amp;o=83&amp;lm=0&amp;th=0&amp;sm=1&amp;sn=1" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen=""></iframe></div></div><div data-silex-type="text-element" class="editable-style silex-id-1576611862490-17 text-element" style=""><div class="silex-element-content normal"><p>ABG is the best news station in Rising Sun (The only news station there). There's might be a chance of gavins annoying you today.</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576683209451-20 html-element" style=""><div class="silex-element-content">
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,10 +107,53 @@
 
 
 
-</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576677900532-19 html-element" style=""><div class="silex-element-content"><div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
-  Welcome to ABG
-</div></div></div></div>
+</div></div><div data-silex-type="html-element" class="editable-style silex-id-1576684388281-21 html-element" style=""><div class="silex-element-content"><form method="post" action="//submit.form" onsubmit="return validateForm();">
+<div style="width: 400px;">
+</div>
+<div style="padding-bottom: 18px;font-size : 24px;">Newsletter Subscription</div>
+<div style="padding-bottom: 18px;">NAME<span style="color: red;"> *</span><br>
+<input type="text" id="data_2" name="data_2" style="width : 300px;" class="form-control">
+</div>
+<div style="padding-bottom: 18px;">ORGANIZATION<br>
+<input type="text" id="data_3" name="data_3" style="width : 300px;" class="form-control">
+</div>
+<div style="padding-bottom: 18px;">EMAIL<span style="color: red;"> *</span><br>
+<input type="text" id="data_4" name="data_4" style="width : 300px;" class="form-control">
+</div>
+<div style="padding-bottom: 18px;"><input name="skip_Submit" value="SUBSCRIBE" type="submit"></div>
+<div>
+<div style="float:right"><a href="" id="lnk100" title="ABG">ABG</a></div>
+<script src="https://www.100forms.com/js/FORMKEY:P7EZAUBAFGU8/SEND:gavin.j.clark07@gmail.com" type="text/javascript"></script>
+</div>
+</form>
+
+<script type="text/javascript">
+function validateForm() {
+if (isEmpty(document.getElementById('data_2').value.trim())) {
+alert('NAME is required!');
+return false;
+}
+if (isEmpty(document.getElementById('data_4').value.trim())) {
+alert('EMAIL is required!');
+return falseer;
+}
+if (!validateEmail(document.getElementById('data_4').value.trim())) {
+alert('EMAIL must be a valid email address!');
+return false;
+}
+return true;
+}
+function isEmpty(str) { return (str.length === 0 || !str.trim()); }
+function validateEmail(email) {
+var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,15}(?:\.[a-z]{2})?)$/i;
+return isEmpty(email) || re.test(email);
+}
+</script></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576686140014-22 html-element" style="top: 1555px; left: 265px; width: 521px; min-height: 1186px;"><div class="silex-element-content"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="/flash-games-jkdsfhjksdhiouiu/7419.swf" width="550" height="400">
+<param name="movie" value="/flash-games-jkdsfhjksdhiouiu/7419.swf">
+<param name="quality" value="high">
+<param name="menu" value="false">
+<embed src="../../../../../flash-games-jkdsfhjksdhiouiu/7419.swf" quality="high" menu="false" pluginspage="/flash-games-jkdsfhjksdhiouiu/7419.swf" type="application/x-shockwave-flash" width="550" height="400"> 
+</object></div></div></div>
     </div>
     <div data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 silex-container-content container-element website-width">
@@ -118,7 +164,7 @@
             </div>
         <div data-silex-type="html-element" class="editable-style silex-id-1576608073677-9 html-element" style=""><div class="silex-element-content"><video src="assets/pass-countdown.ogg" width="170" height="85" controls="">
 <p>If you are reading this, it is because your browser does not support the HTML5 video element.</p>
-</video></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576611493628-16 html-element" style=""><div class="silex-element-content"><p>ABG</p></div></div></div>
+</video></div></div><div data-silex-type="html-element" class="editable-style silex-id-1576694848726-1 html-element" style=""><div class="silex-element-content"><p>  ABG</p></div></div></div>
     </div>
 
 
